# apiServices/users/route.js
@@ -5,8 +5,8 @@ import { UserController } from './controller.js'
 export const userRouter = Router()
 
 userRouter.get('/', UserController.getAll)
-userRouter.post('/', UserController.create)
-
+userRouter.post('/signUp/', UserController.signUp)
+userRouter.post('/signIn/', UserController.signIn)
 userRouter.get('/:id', UserController.getById)
 userRouter.delete('/:id', UserController.delete)
 userRouter.patch('/:id', UserController.update)
